Move App.module.css into components and fix background-image not showing in build

--- a/poke-app/src/components/App.module.css
+++ b/poke-app/src/components/App.module.css
@@ -7,9 +7,7 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  background-image:
-  repeating-linear-gradient(#ccc 0 1px, transparent 1px 100%),
-  repeating-linear-gradient(90deg, #ccc 0 1px, transparent 1px 100%);
+  background-image: repeating-linear-gradient(#ccc 0px 1px, transparent 1px 100%), repeating-linear-gradient(90deg, #ccc 0 1px, transparent 1px 100%);
   background-size: 120px 120px;
 }
 *, *:after, *:before {
